--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "axios": "0.18.1",
     "core-js": "3.6.5",
     "element-ui": "2.13.2",
+    "encryptlong": "^3.1.4",
     "js-cookie": "2.2.0",
+    "jsencrypt": "^3.3.1",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "path-to-regexp": "2.4.0",
@@ -40,6 +42,7 @@
     "eslint": "6.7.2",
     "eslint-plugin-vue": "6.2.2",
     "html-webpack-plugin": "3.2.0",
+    "jsencrypt": "^3.3.1",
     "mockjs": "1.0.1-beta3",
     "runjs": "4.3.2",
     "sass": "1.26.8",
